web-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-app-ingress
  namespace: ewf-space
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: pst0.dhl-ewf.kyiv.epam.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ewf-web-app
          servicePort: 80
